Add: 가상스레드 입찰 메서드 구현
메서드 및 테스트코드, 의존성 추가