@@ -12,7 +12,7 @@
 	<artifactId>beespring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>beespring</name>
-	<description>BeeSpring Proejct</description>
+	<description>BeeSpring Project</description>
 	<properties>
 		<java.version>21</java.version>
 		<spring-ai.version>0.8.1</spring-ai.version>
@@ -210,6 +210,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
@@ -238,6 +243,18 @@
 				<!--                  <version>${spring-restdocs.version}</version>-->
 				<!--               </dependency>-->
 				<!--            </dependencies>-->
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
